--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Formacom\\Mvc\\": "src/"
+            "App\\": "src/",
+            "Core\\": "core/"
         }
     },
     "authors": [
